<resources>
    <string name="app_name">MealDealed Fresh</string>
    <string name="next">Next</string>
    <string name="photo_column">Photo</string>
    <string name="description_column">Description</string>
    <string name="scan_collection_qr_code">Scan Collection QR Code</string>
    <string name="buttons_meals_for_prep">READY</string>
    <string name="main_title">Main:</string>
    <string name="side_title">Side:</string>
    <string name="drink_title">Drink:</string>
    <string name="meal_to_prepare_title">Meal to Prepare</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="main_page_title">MealDealed  @Fresh </string>
    <string name="to_prepare_page">To Prepare</string>
    <string name="to_collect_page">Ready To Collect</string>
    <string name="qr_code_scanner">QR Code Scanner</string>
    <string name="collected">Collected</string>
    <string name="prawn_mayo">Prawn Mayo</string>
    <string name="meal_collected">Meals collected</string>
    <string name="BLT">BLT</string>
    <string name="All_day_breakfast">All Day Breakfast</string>
    <string name="sprite">Sprite50cl</string>
    <string name="buxton">Buxton1L</string>
    <string name="coca">Coca33cl</string>
    <string name="crisps">crisps</string>
    <string name="drink">DRINK</string>
    <string name="main">MAIN</string>
    <string name="side">SIDE</string>
    <string name="please_focus_on_qr_code">Please focus on QR code</string>
    <string name="updateBtn">Update</string>
    <string name="update">Update</string>
    <string name="meals_for_collection">Meals for Collection</string>
</resources>
