<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MealsForCollection">


    <TextView
        android:id="@+id/collectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_light"
        android:text="@string/meals_for_collection"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <Button
        android:id="@+id/collectionUpdateButton"
        android:background="@color/light_orange_background"
        android:textColor="@color/black"
        android:layout_width="150dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/updateBtn"
        android:textSize="20sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/collectionRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="400dp">

    </android.support.v7.widget.RecyclerView>

    <Button
        android:id="@+id/to_barcode_scanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/scan_collection_qr_code"
        android:textColor="@color/black"
        android:background="@color/light_orange_background"
        android:fontFamily="@font/montserrat_light"
        tools:id="@id/to_barcode_scanner" />

    <Button
        android:id="@+id/nextToCollected"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="600dp"
        android:layout_gravity="center"
        android:text="@string/next"
        android:textColor="@color/black"
        android:background="@color/light_orange_background"
        android:fontFamily="@font/montserrat_light"
        tools:height="15dp"
        tools:width="100dp" />

</LinearLayout>












