<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <include layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/resize_logo" />

        <Button
            android:id="@+id/to_prepare_page_button"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/to_prepare_page"
            android:textColor="@color/black"
            android:background="@color/light_orange_background"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_light"
            />

        <Button
            android:id="@+id/to_collect_page_button"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/to_collect_page"
            android:textColor="@color/black"
            android:background="@color/light_orange_background"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_light"
            />

        <Button
            android:id="@+id/collected_button"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:text="@string/collected"
            android:textColor="@color/black"
            android:background="@color/light_orange_background"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/montserrat_light"
            />
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>